Добавлена подсветка синтаксиса JSX, лишние пробельные символы обрезаются

--- a/examples/advanced/context/index.html
+++ b/examples/advanced/context/index.html
@@ -72,7 +72,7 @@
         :
     </p>
 
-    <pre><code class="language-js">
+    <pre class="line-numbers"><code class="language-jsx">
       class App extends React.Component {
         render() {
           return &lt;Toolbar theme="dark" />;
@@ -98,7 +98,7 @@
 
     <p>Используя контекст, мы можем избежать передачи свойств через промежуточные элементы:</p>
 
-    <pre><code class="language-js">
+    <pre class="line-numbers"><code class="language-jsx">
         // Контекст позволяет нам передавать значение глубоко в дерево компонентов
         // без его явной передачи через каждый компонент.
         // Создайте контекст для текущей темы (значение "light" по умолчанию).
