--- a/examples/advanced/refs-and-dom/index.html
+++ b/examples/advanced/refs-and-dom/index.html
@@ -72,7 +72,7 @@
         ref. Как правило, они назначаются свойствам экземпляра компонента, в то время как компонент сконструирован таким
         образом, чтобы ссылки были доступны из любого места этого компонента.</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         class MyComponent extends React.Component {
           constructor(props) {
             super(props);
@@ -90,7 +90,7 @@
         ref. Как правило, они назначаются свойствам экземпляра компонента, в то время как компонент сконструирован таким
         образом, чтобы ссылки были доступны из любого места этого компонента.</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         const node = this.myRef.current;
     </code></pre>
 
