--- a/examples/advanced/render-props/index.html
+++ b/examples/advanced/render-props/index.html
@@ -50,7 +50,7 @@
     <p class="section">Паттерн: свойство render</p>
     <p>Термин «свойство render» (в оригинале «render prop») относится к простой методике совместного использования кода между компонентами React, принимающими свойство prop, значение которого является функцией.</p>
     <p>Компонент со свойством render принимает функцию, которая возвращает элемент React, и вызывает её вместо реализации своей собственной логики отрисовки.</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   &lt;DataProvider render={data => (
     &lt;h1>Hello {data.target}&lt;/h1>
   )}/>
@@ -62,7 +62,7 @@
     <p class="section">Используйте «свойство render» для сквозной функциональности</p>
     <p>Компоненты являются основным элементом повторного использования кода в React, но не всегда очевидно, как совместно использовать состояние или поведение, которые один компонент инкапсулирует в другие компоненты, нуждающиеся в этом состоянии.</p>
     <p>Например, следующий компонент отслеживает позицию мыши в веб-приложении:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
  class MouseTracker extends React.Component {
     constructor(props) {
       super(props);
@@ -91,7 +91,7 @@
     <p>Когда курсор перемещается по экрану, компонент отображает его координаты (x, y) в.</p>
     <p>Теперь возникает вопрос: как мы можем повторно использовать это поведение в другом компоненте? Другими словами, если другой компонент должен знать о позиции курсора, можем ли мы инкапсулировать это поведение таким образом, чтобы можно было легко поделиться им с этим компонентом?</p>
     <p>Поскольку компоненты являются базовой единицей повторного использования кода в React, попробуем немного отрефакторить код, чтобы использовать компонент &lt;Mouse>, инкапсулирующий поведение, которое нам можно повторно использовать в любом другом месте.</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
  // Компонент &lt;Mouse> инкапсулирует необходимое нам поведение...
   class Mouse extends React.Component {
     constructor(props) {
@@ -133,7 +133,7 @@ return (
     <p>Теперь компонент &lt;Mouse> инкапсулирует все поведение, связанное с прослушиванием событий mousemove и хранением позиции (x, y) курсора, но он еще не может быть использован повторно.</p>
     <p>Предположим, что у нас есть компонент &lt;Cat>, который отрисовывает изображение кота, преследующего мышь по экрану. Мы могли бы использовать свойство &lt;Cat> mouse = {{x, y}}>, сообщая компоненту координаты мыши, чтобы он знал, где разместить изображение на экране.</p>
     <p>В качестве первого приближения вы можете попробовать выполнить отрисовку компонента &lt;Cat> внутри метода render компонента &lt;Mouse>, например:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         class Cat extends React.Component {
     render() {
       const mouse = this.props.mouse
@@ -188,7 +188,7 @@ return (
     </code></pre>
     <p>Такой подход будет работать для нашего конкретного случая, но мы не достигли цели по-настоящему инкапсулировать поведение для повторного использования. Теперь, каждый раз, когда нам нужна позиция мыши для какого-нибудь другого случая, мы должны создать новый компонент (т. е. по существу другой &lt;MouseWithCat>), который отрисовывает что-то конкретное для данного случая.</p>
     <p>Вот где в силу вступает паттерн «свойство render»: вместо жесткого кодирования &lt;Cat> внутри компонента &lt;Mouse> и изменения результата его отрисовки, мы можем предоставить компоненту &lt;Mouse> особое свойство-функцию, которое он использует для динамического определения того, что необходимо отрисовать. Это особое свойство и есть «свойство render».</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   class Cat extends React.Component {
     render() {
       const mouse = this.props.mouse;
@@ -245,7 +245,7 @@ return (
     <p>Данный подход делает поведение, которое нам необходимо для совместного использования, чрезвычайно портативным. Чтобы получить это поведение, отрисуйте компонент &lt;Mouse> с помощью свойства render, которое сообщает ему, что необходимо отрисовать, используя текущее положение (x, y) курсора.</p>
     <p>Необходимо отметить одну важную деталь о свойстве render: вы можете реализовать большинство компонентов более высокого порядка (HOC), используя обычный компонент со свойством render. Например, если вы предпочли бы иметь такой HOC как withMouse вместо &lt;Mouse>, вы могли бы легко создать его с помощью обычного компонента &lt;Mouse> со свойством render:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   // Если вам действительно по какой-то причине необходим HOC, вы можете без труда
   // создать его, используя обычный компонент со свойством render
   function withMouse(Component) {
@@ -267,14 +267,14 @@ return (
     <p class="section">Использование свойств, отличных от "render"</p>
     <p>Важно помнить, что только потому, что паттерн называется «свойство render», вам не обязательно использовать свойство с именем render для реализации этого паттерна. Фактически, любое свойство, которое является функцией и которое компонент использует, чтобы определить, что ему необходимо отрисовать , технически является паттерном «свойство render».</p>
     <p>Хотя приведенные выше примеры используют свойство render, мы могли бы так же легко использовать свойство children!</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
 &lt;Mouse children={mouse => (
   &lt;p>The mouse position is {mouse.x}, {mouse.y}&lt;/p>
 )}/>
         <CustomButton color="red"/>
     </code></pre>
     <p>И помните, что на самом деле нет необходимости указывать свойство children в списке «атрибутов» вашего JSX элемента. Вместо этого вы можете поместить его прямо внутри этого элемента!</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
    &lt;Mouse>
     {mouse => (
       &lt;p>Позиция мыши: {mouse.x}, {mouse.y}&lt;/p>
@@ -284,7 +284,7 @@ return (
     </code></pre>
     <p>Вы можете увидеть этот подход в react-motion API.</p>
     <p>Поскольку этот метод немного необычен, вы при разработке API, вероятно, захотите явно указать, что свойство children должно быть функцией в ваших propTypes, как здесь:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   Mouse.propTypes = {
     children: PropTypes.func.isRequired
   };
@@ -294,7 +294,7 @@ return (
     <p class="section">Будьте внимательны, когда используете паттерн «свойство render» с React.PureComponent</p>
     <p>Использование свойства render может свести на нет все преимущество, которое дает использование React.PureComponent, если вы создаете функцию внутри метода render. Это происходит из-за того, что неглубокое сравнение свойств props всегда возвращает false для новых свойств props, и каждая отрисовка в этом случае генерирует новое значение для свойства render.</p>
     <p>Продолжим работу с нашим компонентом &lt;Mouse>. Пусть Mouse будет наследоваться от React.PureComponent, а не от React.Component, тогда наш пример будет выглядеть так:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   class Mouse extends React.PureComponent {
     // Та же реализация, что и выше...
   }
@@ -322,7 +322,7 @@ return (
     <p>В этом примере каждый раз, когда &lt;MouseTracker> отрисовывается, он генерирует новую функцию как значение свойства &lt;Mouse render>, тем самым сводя на нет эффект наследования &lt;Mouse> от React.PureComponent!</p>
     <p>Чтобы обойти эту проблему, иногда вы можете определить свойство как метод экземпляра, например:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   class MouseTracker extends React.Component {
     constructor(props) {
       super(props);
