--- a/examples/advanced/strict-mode/index.html
+++ b/examples/advanced/strict-mode/index.html
@@ -52,7 +52,7 @@
     <p class="section">Строгий режим</p>
     <p>StrictMode&nbsp;— инструмент для выделения потенциальных проблем в приложении. Как и Fragment, StrictMode не отображает какой-либо видимый UI. Он активирует дополнительные проверки и предупреждения для своих потомков.</p>
     <p>Вы можете включить строгий режим для любой части вашего приложения. Например:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   import React from 'react';
 
   function ExampleApplication() {
@@ -87,7 +87,7 @@
     <p class="section">Предупреждение об использовании устаревшего строкового API для ref</p>
     <p>Ранее React предоставлял два способа управления ссылками ref: устаревший строковый API и API обратного вызова. Хотя строковый API был более удобным, он имел ряд недостатков, поэтому наша официальная рекомендация заключалась в том, чтобы вместо него использовать форму обратного вызова.</p>
     <p>React 16.3 добавил третий вариант, который предлагает удобство строки ref без каких-либо недостатков:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   class MyComponent extends React.Component {
     constructor(props) {
       super(props);
@@ -116,7 +116,7 @@
     <p>Строгий режим не может автоматически обнаруживать для вас побочные эффекты, но он может помочь вам определить их, сделав их немного более детерминированными. Это достигается путем преднамеренного двойного вызова следующих методов:Метод constructor компонента-класса. Метод render. обновляющие функции метода setState (первый аргумент), Статический метод getDerivedStateFromProps.</p>
     <p>К примеру, рассмотрим следующий код: </p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   class TopLevelRoute extends React.Component {
     constructor(props) {
       super(props);
