--- a/examples/advanced/typechecking-with-proptypes/index.html
+++ b/examples/advanced/typechecking-with-proptypes/index.html
@@ -61,7 +61,7 @@
         встроенных возможностей по проверке типов. Чтобы запустить проверку типов для свойств компонента, вы можете
         назначить специальное свойство propTypes:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         import PropTypes from 'prop-types';
 
         class Greeting extends React.Component {
