--- a/examples/advanced/uncontrolled-components/index.html
+++ b/examples/advanced/uncontrolled-components/index.html
@@ -61,7 +61,7 @@
 
     <p>К примеру, данный код принимает только имя пользователя в неконтролируемом компоненте:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         class SearchUserForm extends React.Component {
         constructor(props) {
           super(props);
