--- a/examples/installation/add-to-app/index.html
+++ b/examples/installation/add-to-app/index.html
@@ -83,14 +83,14 @@
       Для установки React с использованием Yarn:
     </p>
 
-    <pre><code class="language-js">  yarn init
+    <pre><code class="language-jsx">  yarn init
   yarn add react react-dom</code></pre>
 
     <p>
       Для установки React с использованием npm:
     </p>
 
-    <pre><code class="language-js">  npm init
+    <pre><code class="language-jsx">  npm init
   npm install --save react react-dom</code></pre>
 
     <p>
@@ -118,7 +118,7 @@
       Самый маленький пример React выглядит так:
     </p>
 
-    <pre><code class="language-js">  import React from 'react';
+    <pre><code class="language-jsx">  import React from 'react';
   import ReactDOM from 'react-dom';
 
   ReactDOM.render(
