--- a/examples/quick-start/hello-world/index.html
+++ b/examples/quick-start/hello-world/index.html
@@ -61,7 +61,7 @@
         <a href="../../../theory.html">Установка React</a>.</p>
 
     <p>Рассмотрим небольшой кусочек кода:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         ReactDOM.render(
          &lt;h1&gt;Hello, world!&lt;/h1&gt;,
          document.getElementById('root')
