--- a/examples/quick-start/thinking-in-react/index.html
+++ b/examples/quick-start/thinking-in-react/index.html
@@ -68,7 +68,7 @@
 
     <p>Наш JSON API возвращает некоторую информацию, которая выглядит так:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
 [
   {category: 'Спортивные товары', price: '$49.99', stocked: true, name: 'Футбол'},
   {category: 'Спортивные товары', price: '$9.99', stocked: true, name: 'Бейсбол'},
