--- a/examples/redux/install/index.html
+++ b/examples/redux/install/index.html
@@ -49,7 +49,7 @@
 
     <p>Для установки стабильной версии:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         npm install --save redux
     </code></pre>
 
