--- a/labs/lab01/index.html
+++ b/labs/lab01/index.html
@@ -86,7 +86,7 @@
 
         <p>В ответ на запрос сервер фондовой биржи вернул следующий объект, содержащий названия акций, их текущую цену и изменение цены:</p>
 
-        <pre class="line-numbers"><code class="language-js">[
+        <pre class="line-numbers"><code class="language-jsx">[
     {
         stock_name: "EFX",
         company_name: "Equifax Inc",
