--- a/examples/advanced/error-boundaries/index.html
+++ b/examples/advanced/error-boundaries/index.html
@@ -57,7 +57,7 @@
     <p>Границы ошибок&nbsp;— это компоненты React, которые отлавливают ошибки JavaScript в любом месте их дочернего дерева компонентов, регистрируют эти ошибки и отображают резервный интерфейс вместо поломанного дерева компонентов. Границы ошибок перехватывают ошибки во время отрисовки, в методах жизненного цикла и в конструкторах всего дерева под ними.</p>
     <p>Компонент класса становится границей ошибки, если он определяет новый метод жизненного цикла, называемый componentDidCatch (error, info):</p>
 
-    <pre><code class="language-js">
+    <pre class="line-numbers"><code class="language-jsx">
     class ErrorBoundary extends React.Component {
     constructor(props) {
       super(props);
@@ -84,11 +84,11 @@
 
     <p>Затем вы можете использовать его как обычный компонент:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   &lt;ErrorBoundary>
     &lt;MyWidget />
   &lt;/ErrorBoundary>
-        <CustomButton color="red"/>
+        &lt;CustomButton color="red"/>
     </code></pre>
     <p>Метод componentDidCatch () работает как блок catch {} JavaScript, но для компонентов. Только компоненты класса могут являться границами ошибок. На практике вы скорее всего предпочтёте объявить компонент границы ошибки один раз и использовать его во всем приложении.</p>
     <p>Обратите внимание, что граница ошибки отлавливает только ошибки в компонентах ниже их в дереве. Граница ошибки не может отловить ошибку внутри себя. Если текущая граница ошибки проваливает попытку отобразить сообщение об ошибке, ошибка будет распространяться на ближайшую границу ошибки выше по дереву иерархии. Это тоже похоже на то, как блок catch {} работает в JavaScript.</p>
@@ -96,7 +96,7 @@
     <p class="section">Параметры componentDidCatch</p>
     <p>error&nbsp;— это ошибка, которая была выброшена.</p>
     <p>info&nbsp;— это объект с ключом componentStack. Свойство содержит информацию о стеке компонентов во время выбрасывания ошибки.</p>
-    <pre><code class="language-js">
+    <pre class="line-numbers"><code class="language-jsx">
   //...
   componentDidCatch(error, info) {
 
@@ -129,7 +129,7 @@
 
     <p class="section">Почему не try/catch?</p>
     <p>try/catch хорош, но он работает только для императивного кода:</p>
-    <pre><code class="language-js">
+    <pre class="line-numbers"><code class="language-jsx">
   try {
     showButton();
   } catch (error) {
@@ -138,7 +138,7 @@
         <CustomButton color="red"/>
     </code></pre>
     <p>Однако компоненты React являются декларативными и указывают, что должно быть отображено:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
            &lt;Button />
         <CustomButton color="red"/>
     </code></pre>
@@ -149,7 +149,7 @@
     <p>React не нуждается в границах ошибок внутри обработчиков событий, чтобы восстановиться от этих ошибок. В отличие от методов отрисовки и жизненного цикла, обработчики событий не вызываются во время отрисовки. Поэтому, если обработчики выбрасывают ошибки, React все еще знает, что отображать на экране.</p>
     <p>Если вам нужно поймать ошибку внутри обработчика событий, используйте обычный оператор try/catch JavaScript:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   class ErrorCapturer extends React.Component {
     constructor(props) {
       super(props);
