--- a/examples/advanced/higher-order-comp/index.html
+++ b/examples/advanced/higher-order-comp/index.html
@@ -52,7 +52,7 @@
     <p class="section">Компоненты более высокого порядка </p>
     <p>Компонент более высокого порядка (КБВП) (в документации Higher-Order Components — сокращенно HOC), или старшие компоненты представляет собой усовершенствованный подход в React для повторного использования логики компонентов. Старшие компоненты не являются частью React API, как таковой. Они представляют собой паттерн, который возникает из композиционной природы React.</p>
     <p>Компонент более высокого порядка, или старший компонент&nbsp;— это функция, которая принимает компонент и возвращает новый компонент.</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         const EnhancedComponent = higherOrderComponent(WrappedComponent);
          <CustomButton color="red"/>
     </code></pre>
@@ -63,7 +63,7 @@
     <p class="section">Использование старших компонентов для сквозной функциональности</p>
     <p>Компоненты являются основной единицей повторного использования кода в React. Тем не менее, вы обнаружите, что некоторые паттерны не подходят для традиционных компонентов.</p>
     <p>Например, предположим, что у вас есть компонент NotificationList, который подписывается на внешний источник данных для отображения списка уведомлений:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   class NotificationList extends React.Component {
     constructor() {
       super();
@@ -104,7 +104,7 @@
          <CustomButton color="red"/>
     </code></pre>
     <p>Позже вы пишете компонент для подписки на одно уведомление, который следует аналогичному шаблону:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
          class NotificationDetails extends React.Component {
     constructor(props) {
       super(props);
@@ -145,7 +145,7 @@
     <p>При демонтаже слушатель изменений удаляется.</p>
     <p>Вы можете себе представить, что в большом приложении этот шаблон: подписка на NotificationDataStore и вызов setState будет повторяться снова и снова. Следовательно нам нужна абстракция, которая позволит определить эту логику в одном месте и использовать ее всеми компонентами. Именно здесь выделяются компоненты более высокого порядка.</p>
     <p>Мы можем написать функцию, которая создает компоненты, такие как NotificationList и NotificationDetails, которые подписываются на NotificationDataStore. Функция будет принимать в качестве одного из своих аргументов дочерний компонент, который получает данные подписки в как свойство. Назовем эту функцию addSubscription:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   const NotificationListWithSubscription = addSubscription(
     NotificationList,
     (store) => store.getNotifications()
@@ -159,7 +159,7 @@
     </code></pre>
     <p>Первый параметр&nbsp;— это оборачиваемый компонент. Второй параметр извлекает данные, которые нас интересуют, используя NotificationDataStore и текущие свойства.</p>
     <p>Когда NotificationListWithSubscription и NotificationDetailsWithSubscription отрисовываются, NotificationList и NotificationDetails получат свойство data, с самыми последними данными, полученными из NotificationDataStore:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   // Данная функция принимает компонент...
   function addSubscription(WrappedComponent, selectData) {
     // ...и возвращает другой компонент...
@@ -203,7 +203,7 @@
 
     <p class="section">Не изменяйте оригинальный компонент. Используйте композицию</p>
     <p>Сопротивляйтесь соблазну модифицировать прототип компонента (или каким-то иным образом его изменить) внутри старшего компонента.</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   function addErrorMessage(TargetComponent) {
     TargetComponent.prototype.showErrorMessage(text) {
       //...
@@ -221,7 +221,7 @@
     <p>Изменяющий старший компоне&nbsp;— это плохая абстракция, так как тот, кто его использует, должен знать его детали реализации, чтобы избежать конфликтов с другими старшими объектами.</p>
     <p>Вместо изменения оригинального компонента старшим компонентом вы должны использовать композицию, обертывая входной компонент в компонент-контейнер:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   function addErrorMessage(TargetComponent) {
     return class extends React.Component {
       showErrorMessage(text) {
@@ -242,7 +242,7 @@
     <p class="section">Соглашение: передавайте несвязанные с контейнером свойства в упакованный компонент</p>
     <p>Старшие компоненты добавляют новую функциональность в целевой компонент. Они не должны радикально изменять свой протокол взаимодействия с оригинальными компонентами. Ожидается, что компонент, возвращенный из старшего компонента, имеет аналогичный интерфейс с исходным компонентом.</p>
     <p>Старшие компоненты должны передавать свойства в исходный компонент, если они никак не связаны с его основной работой. Большинство старших компонентов содержат метод отрисовки, который выглядит примерно так:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   render() {
     // Отфильтруйте специфические свойства старшего компонента, которые не должны быть переданы
     const { specificProp1, specificProp2, ...propsToPass } = this.props;
@@ -259,24 +259,24 @@
 
     <p class="section">Соглашение: максимальная компонуемость</p>
     <p>Не все старшие компоненты выглядят одинаково. Иногда они принимают только один аргумент&nbsp;— завернутый компонент:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         const MyComponentWithErrorMessage = errorMessageSupport(MyComponent);
          <CustomButton color="red"/>
     </code></pre>
     <p>Обычно старшие компоненты принимают дополнительные аргументы. В этом примере объект конфигурации используется для указания зависимостей данных компонента:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
           const MyComponentWithScroll = Scroller.create(MyComponent, config);
          <CustomButton color="red"/>
     </code></pre>
     <p>Наиболее распространенная запись старшего компонента выглядит следующим образом:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   // Redux метод `connect`
   const ConnectedToReduxStoreNotification =
         connect(notificationSelector, notificationActions)(Notification);
          <CustomButton color="red"/>
     </code></pre>
     <p>Если вы разобьете её, легче понять, что происходит.</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   // connect это функция, которая возвращает другую функцию
   const hoc = connect(notificationListSelector, notificationListActions);
   // Возвращаемая функция&nbsp;— старший компонент, который возвращает компонент,
@@ -286,7 +286,7 @@
     </code></pre>
     <p>Другими словами, connect&nbsp;— это функция более высокого порядка, которая возвращает компонент более высокого порядка!</p>
     <p>Такая форма записи может показаться излишне запутанной или ненужной, но она имеет полезное свойство. Старшие компоненты с одним аргументом, такие как возвращаются функцией connect, имеют сигнатуру Component => Component. Функции, тип вывода которых совпадает с типом ввода, очень легко скомбинировать вместе.</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   // Вместо этого...
   const hoc = connect(notificationSelector)(addScrollSupport(OriginalComponent))
 
@@ -306,7 +306,7 @@
     <p class="section">Соглашение: оборачивайте отображаемое имя для простоты отладки</p>
     <p>Компоненты-контейнеры, созданные старшими компонентами, отображаются в инструментах разработчика React, как и любой другой компонент. Чтобы облегчить отладку, выберите отображаемое имя, которое сообщает, что это результат старшего компонента.</p>
     <p>Наиболее распространенным методом является оборачивание отображаемого имени упакованного компонента. Поэтому, если ваш компонент более высокого порядка называется addSubscription, а отображаемое имя обернутого компонента&nbsp;— UserList, используйте имя для отображения AddSubscription (UserList):</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
  function addSubscription(OriginComponent) {
     class SubscriptionSupport extends React.Component {/* ... */}
     SubscriptionSupport.displayName = `AddSubscription(${getDisplayName(OriginComponent)})`;
@@ -325,7 +325,7 @@
     <p class="section">Не используйте старшие компоненты внутри метода “render()”</p>
     <p>Алгоритм сравнения React (называемый согласованием) использует идентификатор компонента, чтобы определить, следует ли обновлять существующее поддерево или удалить его и монтировать новое. Если компонент, возвращаемый из render, идентичен (===) компоненту из предыдущего вызова render, React рекурсивно обновляет поддерево, сравнивая его с новым. Если они не равны, предыдущее поддерево полностью демонтируется.</p>
     <p>Обычно вам не нужно об этом думать. Но это имеет значение для старших компонентов, потому что вы не можете их применять к компоненту внутри его метода render:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
  render() {
     // Новая версия ImprovedComponent будет создаваться при каждом вызове render()
     // ImprovedComponentA !== ImprovedComponentB
@@ -342,7 +342,7 @@
     <p class="section">Статические методы должны быть скопированы</p>
     <p>Иногда полезно определить статический метод для компонента React. Например, контейнеры Relay предоставляют статический метод getFragment для облегчения композиции фрагментов GraphQL.</p>
     <p>Однако, когда вы применяете старший компонент, исходный компонент упаковывается в компонент-контейнер. Это означает, что новый компонент не имеет каких-либо статических методов исходного компонента.</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   // Определение статического метода
   OriginComponent.staticMethod = function() {/*...*/}
   // Сейчас применим старший компонент
@@ -353,7 +353,7 @@
          <CustomButton color="red"/>
     </code></pre>
     <p>Чтобы решить эту проблему, вы можете скопировать методы в контейнер, прежде чем возвращать его:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   function improve(OriginComponent) {
     class Improved extends React.Component {/*...*/}
     // Вам необходимо знать, какие методы копировать :(
@@ -363,7 +363,7 @@
          <CustomButton color="red"/>
     </code></pre>
     <p>Однако для этого требуется, чтобы вы точно знали, какие методы необходимо скопировать. Вы можете использовать hoist-non-react-statics , для автоматического копирования всех статических методов, не связанных с React:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   import hoistNonReactStatic from 'hoist-non-react-statics';
   function improve(OriginComponent) {
     class Improved extends React.Component {/*...*/}
@@ -373,7 +373,7 @@
          <CustomButton color="red"/>
     </code></pre>
     <p>Другим возможным решением является экспорт статического метода отдельно от самого компонента.</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   // Вместо...
   CustomComponent.staticMethod = staticMethod;
   export default CustomComponent;
@@ -390,7 +390,7 @@
     <p>Не смотря на то, что соглашением для компонентов более высокого порядка является передача всех свойств через упакованный компонент вниз по дереву иерархии, невозможно передать ref. Это происходит потому, что фактически&nbsp;— ref не является свойством как key, он обрабатывается React-от специальным образом. Если вы добавите ref в элемент, компонент которого является результатом старшего компонента, ref будет ссылаться на экземпляр внешнего компонента-контейнера, а не на упакованный компонент.</p>
     <p>Если вы столкнулись с этой проблемой, идеальным решением является анализ того, как вообще избежать использования ref. Иногда пользователи, которые являются новичками в парадигме React, полагаются на ссылки ref в ситуациях, когда свойства props будут работать лучше.</p>
     <p>Тем не менее, бывают случаи, когда refs являются необходимым аварийным выходом — иначе React бы их не поддерживал. Примером может являться фокусировка поля ввода, где вы можете потребовать обязательный контроль над компонентом. В этом случае одним из решений является передача обратного вызова ref в качестве обычного свойства, давая ему другое имя:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   function TextField({ inputRef, ...rest }) {
     return &lt;input ref={inputRef} {...rest} />;
   }
