--- a/examples/advanced/integrating-with-lib/index.html
+++ b/examples/advanced/integrating-with-lib/index.html
@@ -62,7 +62,7 @@
     <p>Мы добавим атрибут ref к корневому элементу DOM. Внутри componentDidMount мы получим на него ссылку, чтобы можно было передать его в плагин jQuery.</p>
     <p>Чтобы предотвратить взаимодействие React с DOM после монтирования, мы вернем пустой тег &lt;div /> из метода render(). Элемент &lt;div /> не имеет свойств или дочерних элементов, поэтому у React нет причин обновлять его, оставляя плагину jQuery свободу для управления этой частью DOM:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   // применим плагин "modal"
   class Modal extends React.Component {
     componentDidMount() {
@@ -88,7 +88,7 @@
     <p>Для более конкретного примера, давайте напишем минимальную оболочку для плагина JQuery UI Dialog.</p>
     <p>Во-первых, давайте посмотрим, что Dialog делает с DOM.</p>
     <p>Если вы вызываете Dialog на узле DOM &lt;div>, он автоматически внесет следующие изменения</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   &lt;div class="ui-dialog ui-widget ui-widget-content ui-corner-all ui-draggable ui-resizable">
      &lt;div class="ui-dialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix">
         &lt;span id="ui-dialog-title-dialog" class="ui-dialog-title">Заголовок&lt;/span>
@@ -103,7 +103,7 @@
     <p>Предположим, что это API, к которому мы стремимся с помощью нашего React-компонента-оболочки &lt;Dialog>:</p>
 
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   class App extends React.Component {
     constructor(props){
       super(props);
@@ -128,7 +128,7 @@
     </code></pre>
     <p>Во-первых, мы создадим компонент с методом render(), где будем возвращать &lt;div>:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
 class Dialog extends React.Component {
     constructor(props){
       super(props);
@@ -142,7 +142,7 @@ class Dialog extends React.Component {
     </code></pre>
     <p>Важно знать, что если вы измените DOM вне потока React, вы должны убедиться, что у React нет оснований касаться этих узлов DOM.</p>
     <p>Далее мы реализуем метод жизненного цикла. Нам нужно инициализировать Dialog с помощью ссылки ref на узел &lt;div> в componentDidMount:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   componentDidMount() {
     this.$element = $(this.element);
     this.$element.dialog({title: this.props.title});
@@ -150,13 +150,13 @@ class Dialog extends React.Component {
         <CustomButton color="red"/>
     </code></pre>
     <p>Обратите внимание на одну очень важную деталь: как мы вызываем диалог из приложения.</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         {this.state.isDialogShowed ? &lt;Dialog title="Диалог">Привет, Мир!&lt;/Dialog> : null}
         <CustomButton color="red"/>
     </code></pre>
     <p>Мы либо отрисовываем его, либо возвращаем null. Это сделано для того, чтобы диалог при открытии и закрытии монтировался и демонтировался каждый раз. Это обеспечит вызов методов жизненного цикла компонента диалога, в которых происходит установка и уничтожение плагина. Если бы мы показывали диалог таким образом:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   render(){
     const isShowed = this.state.isDialogShowed;
     return &lt;Dialog isShowed={isShowed} title="Диалог">Привет, Мир!&lt;/Dialog>
@@ -165,19 +165,19 @@ class Dialog extends React.Component {
     </code></pre>
     <p>То его методы жизненного цикла сработали бы лишь один раз при первой отрисовке. А далее вызывался бы только его метод render(), так как диалог не монтируется и не демонтируется.</p>
     <p>Также обратите внимание, что React не присваивает какое-то особенное значение полю this.element. Оно работает только потому, что мы ранее назначили это поле в атрибуте ref в методе render ():</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         &lt;div ref={element => this.element = element}>
         <CustomButton color="red"/>
     </code></pre>
     <p>Данный компонент пока не может демонтироваться. Если вы щелкните на кнопке «закрыть», то диалог больше не откроется. Это происходит потому, что мы не демонтируем компонент. Чтобы это исправить, добавим в компонент диалога метод жизненного цикла componentWillUnmount, в котором будем уничтожать диалог:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   componentWillUnmount() {
     this.$element.dialog('destroy');
   }
         <CustomButton color="red"/>
     </code></pre>
     <p>Но чтобы данный метод вызвался, нам необходимо демонтировать наш диалог. Для этого нам понадобится атрибут onClose для диалога, которому мы присвоим метод-коллбэк, выставляющий isDialogShowed в false:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
  class App extends React.Component {
     constructor(props){
       super(props);
@@ -207,7 +207,7 @@ class Dialog extends React.Component {
         <CustomButton color="red"/>
     </code></pre>
     <p>У самого компонента диалога будем использовать коллбэк onClose в componentDidMount:</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   componentDidMount() {
     this.$element = $(this.element);
     this.$element.dialog({title: this.props.title, close: this.props.onClose});
@@ -223,7 +223,7 @@ class Dialog extends React.Component {
     <p class="section">Замена отрисовки, основанной на строках, на React</p>
     <p>Общим паттерном в старых веб-приложениях является описание фрагментов DOM в виде строки и вставка их в DOM, например: $element.html(htmlString). Эти точки в кодовой базе идеально подходят для внедрения React. Просто перепишите строковое представление как компонент React.</p>
     <p>Итак, следующая реализация jQuery ...</p>
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   $('#root').html('<button id="okButton" class="btn btn-default">OK</button>');
   $('#okButton').on('click',() => {
      alert('Нажата кнопка "ОК"');
@@ -232,7 +232,7 @@ class Dialog extends React.Component {
     </code></pre>
     <p>... может быть переписана с использованием компонента React:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   class Button extends React.Component {
     componentDidMount(){
       $('#okButton').on('click', this.onClick);
@@ -257,7 +257,7 @@ class Dialog extends React.Component {
     <p>Теперь вы можете начать перемещать больше логики в компонент и применять наиболее распространенные практики React. Например, в компонентах лучше не полагаться на идентификаторы, потому что один и тот же компонент может отображаться несколько раз.</p>
     <p>Вместо этого мы будем использовать систему событий React и зарегистрируем обраsботчик кликов непосредственно в элементе React &lt;button>:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
   class Button extends React.Component {
     onClick(){
       alert('Hello!');
