--- a/examples/advanced/react-without-jsx/index.html
+++ b/examples/advanced/react-without-jsx/index.html
@@ -62,7 +62,7 @@
 
     <p>Например, данный код написанный с JSX:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         class Hello extends React.Component {
           render() {
             return &lt;div>Hello {this.props.toWhat}&lt;/div>;
@@ -77,7 +77,7 @@
 
     <p>Может быть преобразован в данный код без использования JSX:</p>
 
-    <pre><code class="language-js">
+    <pre><code class="language-jsx">
         class Hello extends React.Component {
           render() {
             return React.createElement('div', null, `Hello ${this.props.toWhat}`);
