--- a/examples/installation/new-app/index.html
+++ b/examples/installation/new-app/index.html
@@ -75,7 +75,7 @@
       приложение для производства. Вам понадобится Node.js версии 6.0 или старше на вашем компьютере.
     </p>
 
-    <pre><code class="language-js">  npm install -g create-react-app
+    <pre><code class="language-jsx">  npm install -g create-react-app
   create-react-app my-app
 
   cd my-app
@@ -86,7 +86,7 @@
       Если у вас установлен npm 5.2.0+, вы можете использовать npx.
     </p>
 
-    <pre><code class="language-js">  npx create-react-app my-app
+    <pre><code class="language-jsx">  npx create-react-app my-app
 
   cd my-app
   npm start
